--- a/views/union_members.ejs
+++ b/views/union_members.ejs
@@ -123,14 +123,206 @@
                 </div>
                 <div id="folio-container" class="row">
 
+                    <!-- start 2022-23-->
+
+                    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item 2022-23">
+                        <img src="/MEMBERS/2022-23/pritam.jpg" alt="Image" class="img-thumbnail">
+                        <samp><p><h4>MR PRITAM MANDAL</h4></p></samp>
+                        <samp><p>GOVERNING BODY(REP)</p></samp>
+                        <samp><p>(2022-23)</p></samp>                  
+                    </div>
+
+                    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item 2022-23">
+                        <img src="/MEMBERS/2022-23/nayan.jpg" alt="Image" class="img-thumbnail">
+                        <samp><p><h4>MR NAYAN DAS</h4></p></samp>
+                        <samp><p>TREASURER</p></samp>
+                        <samp><p>(2022-23)</p></samp>                  
+                    </div>
+
+                    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item 2022-23">
+                        <img src="/MEMBERS/2022-23/arnab.jpg" alt="Image" class="img-thumbnail">
+                        <samp><p><h4>MR ARNAB BHUNIA</h4></p></samp>
+                        <samp><p>ASST. GENERAL SECRETARY</p></samp>
+                        <samp><p>(2022-23)</p></samp>                  
+                    </div>
+
+                    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item 2022-23">
+                        <img src="/MEMBERS/2022-23/rohon.jpg" alt="Image" class="img-thumbnail">
+                        <samp><p><h4>MR ROHON ALAM</h4></p></samp>
+                        <samp><p>CULTURAL SECRETARY</p></samp>
+                        <samp><p>(2022-23)</p></samp>                  
+                    </div>
+
+                    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item 2022-23">
+                        <img src="/MEMBERS/2022-23/tithi.jpg" alt="Image" class="img-thumbnail">
+                        <samp><p><h4>MS TITHI GHOSH</h4></p></samp>
+                        <samp><p>TECHNICAL HEAD</p></samp>
+                        <samp><p>(2022-23)</p></samp>                  
+                    </div>
+
+
+                    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item 2022-23">
+                        <img src="/MEMBERS/2022-23/vaibhav.jpg" alt="Image" class="img-thumbnail">
+                        <samp><p><h4>MR VAIBHAV MISHRA</h4></p></samp>
+                        <samp><p>ACADEMICS SECRETARY</p></samp>
+                        <samp><p>(2022-23)</p></samp>                  
+                    </div>
+
+                    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item 2022-23">
+                        <img src="/MEMBERS/2022-23/kartik.jpg" alt="Image" class="img-thumbnail">
+                        <samp><p><h4>MR KARTIK KUMAR</h4></p></samp>
+                        <samp><p>ESTABLISHMENT SECRETARY</p></samp>
+                        <samp><p>(2022-23)</p></samp>                  
+                    </div>
+
+                    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item 2022-23">
+                        <img src="/MEMBERS/2022-23/bikram.jpg" alt="Image" class="img-thumbnail">
+                        <samp><p><h4>MR BIKRAM GHOSH</h4></p></samp>
+                        <samp><p>GAMES SECRETARY</p></samp>
+                        <samp><p>(2022-23)</p></samp>                  
+                    </div>
+
+                    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item 2022-23">
+                        <img src="/MEMBERS/2022-23/biplab.jpg" alt="Image" class="img-thumbnail">
+                        <samp><p><h4>MR BIPLAB Das</h4></p></samp>
+                        <samp><p>GAMES SECRETARY</p></samp>
+                        <samp><p>(2022-23)</p></samp>                  
+                    </div>
+
+                    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item 2022-23">
+                        <img src="/MEMBERS/2022-23/sananda.jpg" alt="Image" class="img-thumbnail">
+                        <samp><p><h4>MR SANANDA MISHRA</h4></p></samp>
+                        <samp><p>HOSTEL AFAIRS SECRETARY</p></samp>
+                        <samp><p>(2022-23)</p></samp>                  
+                    </div>
+                    
+                    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item 2022-23">
+                        <img src="/MEMBERS/2022-23/masum.jpg" alt="Image" class="img-thumbnail">
+                        <samp><p><h4>MR MASUM ALAM</h4></p></samp>
+                        <samp><p>CLUB ADMINISTRATION</p></samp>
+                        <samp><p>(2022-23)</p></samp>                  
+                    </div>
+
+                    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item 2022-23">
+                        <img src="/MEMBERS/2022-23/partha.jpg" alt="Image" class="img-thumbnail">
+                        <samp><p><h4>MR PARTHA KUNDU</h4></p></samp>
+                        <samp><p>ASST. TREASURER</p></samp>
+                        <samp><p>(2022-23)</p></samp>                  
+                    </div>
+
+                    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item 2022-23">
+                        <img src="/MEMBERS/2022-23/dipankar.jpg" alt="Image" class="img-thumbnail">
+                        <samp><p><h4>MR DIPANKAR BAGCHI</h4></p></samp>
+                        <samp><p>ASST. CULTURAL SECRETARY</p></samp>
+                        <samp><p>(2022-23)</p></samp>                  
+                    </div>
+
+                    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item 2022-23">
+                        <img src="/MEMBERS/2022-23/preeti.jpg" alt="Image" class="img-thumbnail">
+                        <samp><p><h4>MS PREETI HALDER</h4></p></samp>
+                        <samp><p>ASST. CULTURAL SECRETARY</p></samp>
+                        <samp><p>(2022-23)</p></samp>                  
+                    </div>
+
+                    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item 2022-23">
+                        <img src="/MEMBERS/2022-23/pakhi.jpg" alt="Image" class="img-thumbnail">
+                        <samp><p><h4>MS PAKHI ORAON</h4></p></samp>
+                        <samp><p>ASST. CULTURAL SECRETARY</p></samp>
+                        <samp><p>(2022-23)</p></samp>                  
+                    </div>
+
+                    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item 2022-23">
+                        <img src="/MEMBERS/2022-23/pramit.jpg" alt="Image" class="img-thumbnail">
+                        <samp><p><h4>MR PRAMIT MAHATA</h4></p></samp>
+                        <samp><p>ASST. GAMES SECRETARY</p></samp>
+                        <samp><p>(2022-23)</p></samp>                  
+                    </div>
+
+                    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item 2022-23">
+                        <img src="/MEMBERS/2022-23/sagar.jpg" alt="Image" class="img-thumbnail">
+                        <samp><p><h4>MR SAGAR SAIKH</h4></p></samp>
+                        <samp><p>ASST. GAMES SECRETARY</p></samp>
+                        <samp><p>(2022-23)</p></samp>                  
+                    </div>
+
+                    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item 2022-23">
+                        <img src="/MEMBERS/2022-23/koushik.jpg" alt="Image" class="img-thumbnail">
+                        <samp><p><h4>MR KOUSHIK DAS</h4></p></samp>
+                        <samp><p>ASST. ACADEMICS SECRETARY</p></samp>
+                        <samp><p>(2022-23)</p></samp>                  
+                    </div>
+
+                    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item 2022-23">
+                        <img src="/MEMBERS/2022-23/sunita.jpg" alt="Image" class="img-thumbnail">
+                        <samp><p><h4>MS SUNITA MONDAL</h4></p></samp>
+                        <samp><p>ASST. ACADEMICS SECRETARY</p></samp>
+                        <samp><p>(2022-23)</p></samp>                  
+                    </div>
+
+                    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item 2022-23">
+                        <img src="/MEMBERS/2022-23/ujjwal.jpg" alt="Image" class="img-thumbnail">
+                        <samp><p><h4>MR UJJWAL DAS</h4></p></samp>
+                        <samp><p>ESTABLISHMENT SECRETARY</p></samp>
+                        <samp><p>(2022-23)</p></samp>                  
+                    </div>
+
+                    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item 2022-23">
+                        <img src="/MEMBERS/2022-23/basudev.jpg" alt="Image" class="img-thumbnail">
+                        <samp><p><h4>MR BASUDEV ROY</h4></p></samp>
+                        <samp><p>ESTABLISHMENT SECRETARY></samp>
+                        <samp><p>(2022-23)</p></samp>                  
+                    </div>
+
+                    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item 2022-23">
+                        <img src="/MEMBERS/2022-23/anjishnu.jpg" alt="Image" class="img-thumbnail">
+                        <samp><p><h4>MR ANJISHNU GHOSH</h4></p></samp>
+                        <samp><p>ESTABLISHMENT SECRETARY</p></samp>
+                        <samp><p>(2022-23)</p></samp>                  
+                    </div>
+
+                    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item 2022-23">
+                        <img src="/MEMBERS/2022-23/supriya.jpg" alt="Image" class="img-thumbnail">
+                        <samp><p><h4>MS SUPRIYA BARNWAL</h4></p></samp>
+                        <samp><p>ASST. TECHNICAL HEAD</p></samp>
+                        <samp><p>(2022-23)</p></samp>                  
+                    </div>
+
+                    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item 2022-23">
+                        <img src="/MEMBERS/2022-23/sohel.jpg" alt="Image" class="img-thumbnail">
+                        <samp><p><h4>MR MD. SOHEL RAHAMAN</h4></p></samp>
+                        <samp><p>HOSTEL AFFAIRS SECRETARY</p></samp>
+                        <samp><p>(2022-23)</p></samp>  
+                    </div>
+
+                    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item 2022-23">
+                        <img src="/MEMBERS/2022-23/wasim.jpg" alt="Image" class="img-thumbnail">
+                        <samp><p><h4>MR MD. WASIM AKRAM</h4></p></samp>
+                        <samp><p>HOSTEL AFFAIRS SECRETARY/p></samp>
+                        <samp><p>(2022-23)</p></samp>                  
+                    </div>
+
+                    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item 2022-23">
+                        <img src="/MEMBERS/2022-23/souvik.jpg" alt="Image" class="img-thumbnail">
+                        <samp><p><h4>MR SOUVIK BHOWMIK</h4></p></samp>
+                        <samp><p>CLUB ADMINISTRATION</p></samp>
+                        <samp><p>(2022-23)</p></samp>                  
+                    </div>
+
+                    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item 2022-23">
+                        <img src="/MEMBERS/2022-23/amit.jpg" alt="Image" class="img-thumbnail">
+                        <samp><p><h4>MR AMIT BERA</h4></p></samp>
+                        <samp><p>CLUB ADMINISTRATION</p></samp>
+                        <samp><p>(2022-23)</p></samp>                  
+                    </div>
+
+
+
+
+
                     <!-- start 2021-22 -->
 
-                    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item 2021-22">
-                        <img src="/MEMBERS/2020-21/mistri.jpg" alt="Image" class="img-thumbnail">
-                        <samp><p><h4>MR SUDIPTA MISTRI</h4></p></samp>
-                        <samp><p>GOVERNING BODY(REP)</p></samp>
-                        <samp><p>(2021-22)</p></samp>                  
-                    </div>
+                    
+                
                     <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item 2021-22">
                         <img src="/MEMBERS/2019-20/Russel Biswas_cr.jpg" alt="Image" class="img-thumbnail">
                         <samp><p><h4>MR SAYEEF RUSSEL BISWAS</h4></p></samp>
